<resources>
    <string name="app_name">NetsPay_</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="netspay">NetsPay</string>
    <string name="pay_about">The Payment Platform \n Built For Future</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="cards">Cards</string>
    <string name="earnings">Earnings</string>
    <string name="profile">Profile</string>
    <string name="helps">NetsPay helps you transfer money instantly to anyone over 100+ countries</string>
    <string name="welcome">Welcome</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="dashboard">Dashboard</string>
    <string name="user_name">Samuel Fletcher</string>
    <string name="_3_520">3,520</string>
    <string name="view_all">View all</string>
    <string name="transactions">Transactions</string>
    <string name="graphs">Graphs</string>
    <string name="analytics">Analytics</string>
    <string name="cash">Cash</string>
    <string name="withdraw">Withdraw</string>
    <string name="transfer">Transfer</string>

</resources>